http://winmerge.org/tracker/[tracker-id]

WinMerge 2.12.4
  Add more C/C++ types to syntax highlight (#2776705)
  Bugfix: Reports had same left/right descriptions (#2772646)
  Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
  Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
  Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)

WinMerge 2.12.2 - 2009-04-01 (r6625)
  Disable folder compare tree-view by default (#2714968)
  Bugfix: Filename extension column was empty for files (#2670046)
  Bugfix: Crash when selecting backup folder (#2686382)
  bugfix: Swapping panes did not update statusbar (#2661838)
  Bugfix: Says files are identical after making files different in another
    application and re-loading them (#2672737)
  Bugfix: Files with missing last EOL weren't merged correctly (#2712120)
  Translation updates:
  - Polish (#2717382, #2720875)

WinMerge 2.12.0 - 2009-03-05 (r6542)
  Remember last target folder for Copy/Move to in folder compare (#2659228)
  Detect Windows 7 and Windows 2008 in config log (#2599256)
  Bugfix: Help window opened from WinMerge was modal (#2590079)
  Bugfix: Crash in editor when undoing (#2590212)
  Bugfix: Browse button in Option dialog reverted to previous settings
    (#2606153)
  Bugfix: Files without extension get backed up to name..bak (#2627752)
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Translation updates:
  - Chinese Traditional (#2608190)
  - Croatian (#2596949)
  - Czech (r6538)
  - Danish (#2648183)
  - Dutch (#2586422, #2590430)
  - French (#2603591)
  - Galician (#2632173)
  - German (#2586497)
  - Greek (#2615285)
  - Japanese (r6456)
  - Swedish (#2586274)
  - Ukrainian (#2609242)

WinMerge 2.11.2 - 2009-02-05 (r6428)
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area rect in location pane (#2479804)
  New options page for Shell Integration options (#2433648)