@@ -9,6 +9,7 @@ WinMerge 2.12.4
   Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
   Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
   Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)
+  Bugfix: Could select prediffer when plugins were disabled (#2787131)
 
 WinMerge 2.12.2 - 2009-04-01 (r6625)
   Disable folder compare tree-view by default (#2714968)
